test/classes/vass/method-def-with-type-binding-error-class-2.chpl
class D {
  class C {
    def D.cc() {} // for now, this is an error
  }
}
